@@ -53,6 +53,7 @@ source "$APPSDIR/examples/nxlines/Kconfig"
 source "$APPSDIR/examples/nxtext/Kconfig"
 source "$APPSDIR/examples/ostest/Kconfig"
 source "$APPSDIR/examples/pashello/Kconfig"
+source "$APPSDIR/examples/pca9635/Kconfig"
 source "$APPSDIR/examples/pipe/Kconfig"
 source "$APPSDIR/examples/poll/Kconfig"
 source "$APPSDIR/examples/pppd/Kconfig"
